--- a/client/styles.css
+++ b/client/styles.css
@@ -4,7 +4,13 @@ body {
     width: 100%; /* full window width */
     height: 100%;
     text-align: center;
+    font-family: 'Orbitron', sans-serif;
 }
+
+a { 
+    color: inherit; 
+    text-decoration: none;
+ } 
 
 h1 {
     text-align: center;
@@ -15,6 +21,45 @@ h1 {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
     font-weight: bold;
+}
+
+button {
+    cursor: pointer;
+    font-family:inherit;
+    background: #e8e8e8;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+  }
+
+#bluescore {
+    color: #4183cc;
+}
+
+#redscore {
+    color: #d13030;
+}
+
+.blueturn {
+    color: #4183cc;
+}
+
+.redturn {
+    color: #d13030;
+}
+
+#score {
+    text-align: left;
+    width: 4.9em;
+}
+
+.leftbuttons {
+    float: left;
+}
+
+#new-game {
+    float: right;
 }
 
 #game {
