--- a/client/styles.css
+++ b/client/styles.css
@@ -1,10 +1,12 @@
 body {
+    letter-spacing: .05em;
     margin: 0;
     padding: 0;
     width: 100%; /* full window width */
     height: 100%;
     text-align: center;
     font-family: 'Orbitron', sans-serif;
+    background: #212121;
 }
 
 a { 
@@ -13,6 +15,8 @@ a {
  } 
 
 h1 {
+    font-weight: 300;
+    color: #757575;
     text-align: center;
     display: block;
     font-size: 2em;
@@ -20,13 +24,13 @@ h1 {
     margin-block-end: 0.67em;
     margin-inline-start: 0px;
     margin-inline-end: 0px;
-    font-weight: bold;
 }
 
 button {
     cursor: pointer;
     font-family:inherit;
-    background: #e8e8e8;
+    background: #757575;
+    /* background: #e8e8e8; */
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -74,6 +78,10 @@ button {
     justify-content: space-between;
 }
 
+#dash {
+    color: #757575;
+}
+
 .board {
     display: flex;
     flex-wrap: wrap;
@@ -91,12 +99,19 @@ button {
     color: #fff;
 }
 
+.assassin {
+    color: #fff;
+    background: black;
+}
+
 .hidden {
+    color: gray;
     cursor: pointer;
-    background: #e8e8e8;
+    background: #393433;
 }
 
 .cell {
+    font-size: .85em;
     display: flex;
     justify-content: center;
     align-items: center;
