github icon fix

--- a/client/styles.css
+++ b/client/styles.css
@@ -126,3 +126,14 @@ button {
     align-items: center;
     text-align: center;
 }
+
+#github {
+    color: #757575;
+    margin-top: 2em;
+    align-items: center;
+    text-align: center;
+}
+
+.fa_custom {
+    color: #757575;
+}
