--- a/clonenames-client/src/styles.scss
+++ b/clonenames-client/src/styles.scss
@@ -1,1 +1,50 @@
 /* You can add global styles to this file, and also import other style files */
+body {
+    letter-spacing: .05em;
+    margin: 0;
+    padding: 0;
+    width: 100%; /* full window width */
+    height: 100%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    background: #212121;
+}
+
+body {
+    letter-spacing: .05em;
+    margin: 0;
+    padding: 0;
+    width: 100%; /* full window width */
+    height: 100%;
+    text-align: center;
+    font-family: 'Orbitron', sans-serif;
+    background: #212121;
+}
+
+a { 
+    color: inherit; 
+    text-decoration: none;
+ } 
+
+h1 {
+    font-weight: 300;
+    color: #757575;
+    text-align: center;
+    display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+button {
+    cursor: pointer;
+    font-family:inherit;
+    background: #757575;
+    /* background: #e8e8e8; */
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 14px;
+  }
